[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/rock.gd" type="Script" id=1]
[ext_resource path="res://Sprites/rock.png" type="Texture" id=2]
[ext_resource path="res://Sprites/rock_with_camp.png" type="Texture" id=3]
[ext_resource path="res://Sounds/wood_pickup.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 38, 70 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30, 62 )

[node name="rock" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

visible = false
shape = SubResource( 1 )

[node name="normal" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]

shape = SubResource( 2 )

[node name="with_camp" type="Sprite" parent="." index="3"]

texture = ExtResource( 3 )

[node name="put_camp_on" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="." to="." method="_on_rock_body_entered"]


